--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="col-md-6">
   <div class="-third -margin-bottom">
     <div class="-card-4">
-      <img class="us" src="images/meCloseUpBW.jpg" alt="Stephanie">
+      <img class="us" src="images/sKirshnerSmileBW.jpg" alt="Stephanie">
       <br>
       <br>
       <div class="S2-container">
@@ -144,7 +144,7 @@
   <div class="col-md-6">
   <div class="-third -margin-bottom">
     <div class="card-4">
-      <img class="us" src="images/nicoleCloseUpbw.jpg" alt="Nicole">
+      <img class="us" src="images/nJarsakSmileBW.jpg" alt="Nicole">
       <br>
       <br>
       <div class="S2-container">
